# chat-arch

./: .gitignore  AGENTS.md  GEMINI.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
chatarch/: __init__.py
chatarch/cli/: main.py
chatarch/core/: config.py  enrich.py  sanitizer.py  session.py  stats.py
chatarch/core/exporter/: __init__.py  base.py  jsonl.py  markdown.py  registry.py
chatarch/core/parser/: __init__.py  base.py  claude.py  cursor.py  gemini.py  markdown.py  openai.py  registry.py
chatarch/db/: database.py  models.py
docs/: PRD.md  ROADMAP.md
tests/: dummy_chat.md  dummy_claude.json  dummy_conversations.json  test_claude_parser.py  test_markdown_parser.py  test_openai_parser.py  test_sanitizer.py
