[project]
name = "chat-arch-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "sqlalchemy>=2.0.48",
    "typer>=0.24.1",
]

[project.scripts]
chatasset = "chatarch.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chatarch"]



